--- a/Physarum.vcxproj.filters
+++ b/Physarum.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="CustomAudioStream.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FFTPlanner.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SamplesRenderer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
