--- a/Physarum.vcxproj.filters
+++ b/Physarum.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="SamplesRenderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FrequencyRenderer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
