--- a/Physarum.vcxproj.filters
+++ b/Physarum.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="FrequencyRenderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ColorGradient.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
