--- a/Physarum.vcxproj
+++ b/Physarum.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agent.hpp" />
+    <ClInclude Include="ColorGradient.hpp" />
     <ClInclude Include="ColorMap.hpp" />
     <ClInclude Include="CustomAudioStream.hpp" />
     <ClInclude Include="FFTPlanner.hpp" />
