Revert project to its original purpose (physarum simulation)

--- a/Physarum.vcxproj
+++ b/Physarum.vcxproj
@@ -137,14 +137,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agent.hpp" />
+    <ClInclude Include="AgentCreationUtils.hpp" />
     <ClInclude Include="ColorGradient.hpp" />
     <ClInclude Include="ColorMap.hpp" />
     <ClInclude Include="CustomAudioStream.hpp" />
-    <ClInclude Include="FFTPlanner.hpp" />
-    <ClInclude Include="FrequencyRenderer.hpp" />
     <ClInclude Include="Grid.hpp" />
     <ClInclude Include="Renderer.hpp" />
-    <ClInclude Include="SamplesRenderer.hpp" />
     <ClInclude Include="Simulation.hpp" />
     <ClInclude Include="TrailMap.hpp" />
   </ItemGroup>
