--- a/Physarum.vcxproj.filters
+++ b/Physarum.vcxproj.filters
@@ -41,16 +41,10 @@
     <ClInclude Include="CustomAudioStream.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FFTPlanner.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SamplesRenderer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FrequencyRenderer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ColorGradient.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AgentCreationUtils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
